force-app/main/default/objects/Student_Support_Options__c.object
<CustomObject>
    <description>Object to save the mapping between OutBound Call Result with List Of Values options</description>
    <fields>
        <fullName>List_of_Values__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to map to List of Values object</description>
        <label>List of Values</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>List_of_Values__c.Type__c</field>
                <operation>equals</operation>
                <value>Student Support</value>
            </filterItems>
            <filterItems>
                <field>List_of_Values__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>List Of Values</relationshipLabel>
        <relationshipName>List_of_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outbound_Call__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to link to OutBound Call result option</description>
        <label>Outbound Call</label>
        <referenceTo>Outbound_Call_Result__c</referenceTo>
        <relationshipLabel>Student Support Options</relationshipLabel>
        <relationshipName>Student_Support_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Area__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <formula>List_of_Values__r.System_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Option__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to capture the support Option mapped on List of Values object</description>
        <formula>List_of_Values__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Option</label>
        <type>Text</type>
    </fields>
    <label>Student Support Options</label>
    <nameField>
        <displayFormat>SSO-{000000}</displayFormat>
        <label>Student Support Options Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Support Options</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>